sql/core/src/test/resources/sql-tests/results/interval.sql.out
-- Automatically generated by SQLQueryTestSuite
-- Number of queries: 38


-- !query 0
select interval '1 day' > interval '23 hour'
-- !query 0 schema
struct<(1 days > 23 hours):boolean>
-- !query 0 output
true


-- !query 1
select interval '-1 day' >= interval '-23 hour'
-- !query 1 schema
struct<(-1 days >= -23 hours):boolean>
-- !query 1 output
false


-- !query 2
select interval '-1 day' > null
-- !query 2 schema
struct<(-1 days > CAST(NULL AS INTERVAL)):boolean>
-- !query 2 output
NULL


-- !query 3
select null > interval '-1 day'
-- !query 3 schema
struct<(CAST(NULL AS INTERVAL) > -1 days):boolean>
-- !query 3 output
NULL


-- !query 4
select interval '1 minutes' < interval '1 hour'
-- !query 4 schema
struct<(1 minutes < 1 hours):boolean>
-- !query 4 output
true


-- !query 5
select interval '-1 day' <= interval '-23 hour'
-- !query 5 schema
struct<(-1 days <= -23 hours):boolean>
-- !query 5 output
true


-- !query 6
select interval '1 year' = interval '360 days'
-- !query 6 schema
struct<(1 years = 360 days):boolean>
-- !query 6 output
true


-- !query 7
select interval '1 year 2 month' = interval '420 days'
-- !query 7 schema
struct<(1 years 2 months = 420 days):boolean>
-- !query 7 output
true


-- !query 8
select interval '1 year' = interval '365 days'
-- !query 8 schema
struct<(1 years = 365 days):boolean>
-- !query 8 output
false


-- !query 9
select interval '1 month' = interval '30 days'
-- !query 9 schema
struct<(1 months = 30 days):boolean>
-- !query 9 output
true


-- !query 10
select interval '1 minutes' = interval '1 hour'
-- !query 10 schema
struct<(1 minutes = 1 hours):boolean>
-- !query 10 output
false


-- !query 11
select interval '1 minutes' = null
-- !query 11 schema
struct<(1 minutes = CAST(NULL AS INTERVAL)):boolean>
-- !query 11 output
NULL


-- !query 12
select null = interval '-1 day'
-- !query 12 schema
struct<(CAST(NULL AS INTERVAL) = -1 days):boolean>
-- !query 12 output
NULL


-- !query 13
select interval '1 minutes' <=> null
-- !query 13 schema
struct<(1 minutes <=> CAST(NULL AS INTERVAL)):boolean>
-- !query 13 output
false


-- !query 14
select null <=> interval '1 minutes'
-- !query 14 schema
struct<(CAST(NULL AS INTERVAL) <=> 1 minutes):boolean>
-- !query 14 output
false


-- !query 15
select INTERVAL '9 years 1 months -1 weeks -4 days -10 hours -46 minutes' > interval '1 minutes'
-- !query 15 schema
struct<(9 years 1 months -11 days -10 hours -46 minutes > 1 minutes):boolean>
-- !query 15 output
true


-- !query 16
select cast(v as interval) i from VALUES ('1 seconds'), ('4 seconds'), ('3 seconds') t(v) order by i
-- !query 16 schema
struct<i:interval>
-- !query 16 output
1 seconds
3 seconds
4 seconds


-- !query 17
select interval '1 month 120 days' > interval '2 month'
-- !query 17 schema
struct<(1 months 120 days > 2 months):boolean>
-- !query 17 output
true


-- !query 18
select interval '1 month 30 days' = interval '2 month'
-- !query 18 schema
struct<(1 months 30 days = 2 months):boolean>
-- !query 18 output
true


-- !query 19
select interval '1 month 29 days 40 hours' > interval '2 month'
-- !query 19 schema
struct<(1 months 29 days 40 hours > 2 months):boolean>
-- !query 19 output
true


-- !query 20
select max(cast(v as interval)) from VALUES ('1 seconds'), ('4 seconds'), ('3 seconds') t(v)
-- !query 20 schema
struct<max(CAST(v AS INTERVAL)):interval>
-- !query 20 output
4 seconds


-- !query 21
select min(cast(v as interval)) from VALUES ('1 seconds'), ('4 seconds'), ('3 seconds') t(v)
-- !query 21 schema
struct<min(CAST(v AS INTERVAL)):interval>
-- !query 21 output
1 seconds


-- !query 22
select interval '1 years 2 months 3 weeks 4 days 5 hours 6 minutes 7 seconds 8 milliseconds 9 microseconds'
-- !query 22 schema
struct<1 years 2 months 25 days 5 hours 6 minutes 7.008009 seconds:interval>
-- !query 22 output
1 years 2 months 25 days 5 hours 6 minutes 7.008009 seconds


-- !query 23
select interval '1 year 2 month 3 week 4 day 5 hour 6 minute 7 second 8 millisecond 9 microsecond'
-- !query 23 schema
struct<1 years 2 months 25 days 5 hours 6 minutes 7.008009 seconds:interval>
-- !query 23 output
1 years 2 months 25 days 5 hours 6 minutes 7.008009 seconds


-- !query 24
select interval '1 y 2 mon 3 w 4 d 5 h 6 m 7 s 8 ms 9 us'
-- !query 24 schema
struct<1 years 2 months 25 days 5 hours 6 minutes 7.008009 seconds:interval>
-- !query 24 output
1 years 2 months 25 days 5 hours 6 minutes 7.008009 seconds


-- !query 25
select interval '1 y 2 yr -1 yrs 3 years -2 mons - 3 w  + 4 d +5 hrs 6 mins 7 secs 8 msecs 9 usecs'
-- !query 25 schema
struct<4 years 10 months -17 days 5 hours 6 minutes 7.008009 seconds:interval>
-- !query 25 output
4 years 10 months -17 days 5 hours 6 minutes 7.008009 seconds


-- !query 26
select interval 'day 1 y'
-- !query 26 schema
struct<>
-- !query 26 output
org.apache.spark.sql.catalyst.parser.ParseException

Cannot parse the INTERVAL value: day 1 y
requirement failed: Interval string should be value and unit pairs(line 1, pos 7)

== SQL ==
select interval 'day 1 y'
-------^^^


-- !query 27
select interval '1 1 y'
-- !query 27 schema
struct<>
-- !query 27 output
org.apache.spark.sql.catalyst.parser.ParseException

Cannot parse the INTERVAL value: 1 1 y
requirement failed: Interval string should be value and unit pairs(line 1, pos 7)

== SQL ==
select interval '1 1 y'
-------^^^


-- !query 28
select interval '1 1 1 y'
-- !query 28 schema
struct<>
-- !query 28 output
org.apache.spark.sql.catalyst.parser.ParseException

Cannot parse the INTERVAL value: 1 1 1 y
Error paring interval unit: 1(line 1, pos 7)

== SQL ==
select interval '1 1 1 y'
-------^^^


-- !query 29
select interval '1 daY'
-- !query 29 schema
struct<1 days:interval>
-- !query 29 output
1 days


-- !query 30
select interval ''
-- !query 30 schema
struct<>
-- !query 30 output
org.apache.spark.sql.catalyst.parser.ParseException

Cannot parse the INTERVAL value: 
requirement failed: Interval string should be value and unit pairs(line 1, pos 7)

== SQL ==
select interval ''
-------^^^


-- !query 31
select interval ' '
-- !query 31 schema
struct<>
-- !query 31 output
org.apache.spark.sql.catalyst.parser.ParseException

Cannot parse the INTERVAL value:  
requirement failed: Interval string should be value and unit pairs(line 1, pos 7)

== SQL ==
select interval ' '
-------^^^


-- !query 32
select interval '-'
-- !query 32 schema
struct<>
-- !query 32 output
org.apache.spark.sql.catalyst.parser.ParseException

Cannot parse the INTERVAL value: -
requirement failed: Interval string should be value and unit pairs(line 1, pos 7)

== SQL ==
select interval '-'
-------^^^


-- !query 33
select interval '- year'
-- !query 33 schema
struct<>
-- !query 33 output
org.apache.spark.sql.catalyst.parser.ParseException

Cannot parse the INTERVAL value: - year
requirement failed: Interval string should be value and unit pairs(line 1, pos 7)

== SQL ==
select interval '- year'
-------^^^


-- !query 34
select interval '-1 yea'
-- !query 34 schema
struct<>
-- !query 34 output
org.apache.spark.sql.catalyst.parser.ParseException

Cannot parse the INTERVAL value: -1 yea
Error paring interval unit: yea(line 1, pos 7)

== SQL ==
select interval '-1 yea'
-------^^^


-- !query 35
select interval 1 y 2 mon 3 week
-- !query 35 schema
struct<>
-- !query 35 output
org.apache.spark.sql.catalyst.parser.ParseException

no viable alternative at input '1 y'(line 1, pos 18)

== SQL ==
select interval 1 y 2 mon 3 week
------------------^^^


-- !query 36
select interval '30' y '25' mon
-- !query 36 schema
struct<>
-- !query 36 output
org.apache.spark.sql.catalyst.parser.ParseException

mismatched input ''25'' expecting {<EOF>, ',', 'CLUSTER', 'DISTRIBUTE', 'EXCEPT', 'FROM', 'GROUP', 'HAVING', 'INTERSECT', 'LATERAL', 'LIMIT', 'ORDER', 'MINUS', 'SORT', 'UNION', 'WHERE', 'WINDOW', '-'}(line 1, pos 23)

== SQL ==
select interval '30' y '25' mon
-----------------------^^^


-- !query 37
select interval '-1 yrs' year to month
-- !query 37 schema
struct<>
-- !query 37 output
org.apache.spark.sql.catalyst.parser.ParseException

Interval string does not match year-month format of 'y-m': -1 yrs(line 1, pos 16)

== SQL ==
select interval '-1 yrs' year to month
----------------^^^
